--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,20 +1,21 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme -->
-    <style name="Base.Theme.AdoptDogsApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">#5D4037</item> <!-- Dark Brown Background for Toolbar -->
-        <item name="colorOnPrimary">#FFFFFF</item> <!-- White text on Toolbar -->
+    <style name="Base.Theme.AdoptDogsApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Dark Brown ActionBar Background -->
+        <item name="colorPrimary">#5D4037</item>
+        <item name="colorOnPrimary">#FFFFFF</item> <!-- White text on ActionBar -->
 
+        <!-- Secondary colors -->
         <item name="colorSecondary">#D7CCC8</item> <!-- Beige -->
         <item name="colorOnSecondary">#5D4037</item> <!-- Text on Beige -->
 
+        <!-- Background and text color -->
         <item name="android:windowBackground">#DBC3BC</item> <!-- General App Background -->
-        <item name="android:textColorPrimary">#FFFFFF</item> <!-- Primary Text Color -->
+        <item name="android:textColorPrimary">#3E2723</item> <!-- Primary Text Color -->
     </style>
 
     <style name="Theme.AdoptDogsApp" parent="Base.Theme.AdoptDogsApp">
         <item name="android:statusBarColor">#4E342E</item> <!-- Even Darker Brown for Status Bar -->
-        <item name="android:windowActionBar">true</item>
-        <item name="android:windowNoTitle">false</item>
     </style>
 
     <!-- Custom Theme for Firebase Authentication UI -->
@@ -26,10 +27,6 @@
         <item name="colorOnSecondary">#FFFFFF</item> <!-- Dark Brown Text on Beige -->
 
         <item name="android:buttonStyle">@style/FirebaseButtonStyle</item>
-
-        <!-- Ensure title is visible-->
-        <item name="android:windowActionBar">true</item>
-        <item name="android:windowNoTitle">false</item>
     </style>
 
     <!-- Custom button style for Firebase UI -->
