--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="brown">#FC5F4343</color>
+    <color name="light_brown">#A1887F</color>
+    <color name="light2_brown">#F0D5B3</color>
 </resources>
