--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,46 @@
     tools:context=".ui.home.HomeFragment">
 <!--contain recycle view for displaying dogs-->
 
+    <!-- כפתור סינון -->
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnFilter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Filter By"
+        app:icon="@drawable/baseline_filter_alt_24"
+        app:iconPadding="8dp"
+        android:layout_margin="13dp"
+        app:cornerRadius="15dp"
+        android:layout_gravity="center"
+        app:backgroundTint="@color/white"
+        app:iconTint="#74000000"
+        android:textColor="@color/black"
+        app:strokeWidth="3dp"
+        app:strokeColor="#74000000"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:elevation="10dp"
+        />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnClearFilter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Clear Filter"
+        app:cornerRadius="15dp"
+        android:layout_marginBottom="13dp"
+        android:layout_marginRight="13dp"
+        android:layout_marginLeft="13dp"
+        app:backgroundTint="#C3000000"
+        app:strokeWidth="3dp"
+        app:strokeColor="@color/brown"
+        android:textColor="@color/white"
+        android:elevation="10dp"
+        app:layout_constraintTop_toBottomOf="@id/btnFilter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:icon="@drawable/baseline_cancel_presentation_24"/>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewDogs"
@@ -21,6 +61,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:paddingBottom="100dp"
+        android:layout_marginTop="95dp"
         tools:listitem="@layout/item_dog"
         />
 
