--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,12 +7,13 @@
     tools:context=".ui.home.HomeFragment">
 <!--contain recycle view for displaying dogs-->
 
-    <!-- כפתור סינון -->
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnFilter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Filter By"
+        android:textAllCaps="false"
         app:icon="@drawable/baseline_filter_alt_24"
         app:iconPadding="8dp"
         android:layout_margin="13dp"
@@ -34,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Clear Filter"
+        android:textAllCaps="false"
         app:cornerRadius="15dp"
         android:layout_marginBottom="13dp"
         android:layout_marginRight="13dp"
