--- a/app/src/main/res/layout/item_dog.xml
+++ b/app/src/main/res/layout/item_dog.xml
@@ -136,7 +136,7 @@
                 android:textSize="16sp"
                 android:textColor="@color/black"/>
 
-            <com.google.android.material.button.MaterialButton
+            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                 android:id="@+id/btnShelterDetails"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
