--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -20,4 +20,11 @@
 
         />
 
+    <item
+        android:id="@+id/navigation_Feed"
+        android:icon="@drawable/baseline_grid_view_24"
+        android:title="@string/title_feed"
+
+        />
+
 </menu>
